[package]
name = "wall"
version = "0.1.0"
authors = ["Matteo Guarda <matteoguarda@tutanota.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
log = "0.4.11"
env_logger = "0.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18.2", features = ["xlib"] }
image = "0.23.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

